<resources>
    <string name="app_name">My Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_folder">New Folder</string>
    <string name="create_folder">Create a new folder</string>
    <string name="add_note">New Note</string>
    <string name="create_note">Create a new note</string>
    <string name="signOut_title">Sign out</string>


    <!--Menu desplegable-->
    <string name="menu_notes">Note Folders</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_notelist">Notes</string>
    <string name="menu_sharedNotes">Shared Notes</string>

    <!---ESTELA Strings de las layouts login_user y register_user-->
    <string name="app_name_mayus">MY NOTES</string>
    <string name="layout_log_in">Sign up</string>
    <string name="label_email">Email</string>
    <string name="editText_Email">example: mariareta@hotmail.es</string>
    <string name="label_name">Name</string>
    <string name="label_password">Password</string>
    <string name="checkBox_privacity">I agree to the <font color='red'>Terms of Services</font> and <font color='red'>Privacy Policy</font></string>
    <string name="button_continue">Continue</string>
    <string name="label_have_acount">Have An Account? <font color='red'>Sign in</font> </string>

    <!--Log in-->
    <string name="log_in">Log in</string>
    <string name="see_you">Hi there! Nice to see you again.</string>
    <string name="button_login">Log in</string>
    <string name="forgot_password">"Don't have an account?" <font color='red'>Sign up</font></string>

    <!--Pruebas no tocar-->
    <string name="default_title">Titol per defecte</string>
    <string name="number_notes">Total de notes: </string>

    <!--Cadenes de la cardView de les notes (Pruebas)-->
    <string name="default_title_note">Titol per defecte</string>
    <string name="default_date">12/12/21</string>
    <string name="note_type">Nota de audio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Etiquetas calendario-->
    <string name="cd_calendar">Create a new Reminder</string>
    <string name="fab_calendar">New Reminder</string>
    <string name="cd_ReminderCard">Event image</string>

    <!--Etiquetas del formulario del reminder-->
    <string name="form_title">Title: </string>
    <string name="form_description">Description: </string>
    <string name="form_alarm">Add alarm</string>
    <string name="clock_description">Alarm image</string>
    <string name="settings_description">Settings description</string>
    <string name="change_alarm">Change alarm: </string>
    <string name="form_location">Enter the location where the event takes place (city, country, postal code, etc.)</string>

    <!--Etiquetas nota de imagen-->
    <string name="textImageNote">Empty note</string>

    <!--Etiquetas del formulario de la AudioNote-->
    <string name="add_description_msg">Note title</string>
    <string name="save_note">Save note</string>
    <string name="change_location">Change Location</string>
    <string name="use_this_location">Use this location?</string>
    <string name="select">Select</string>


    <string name="complete_address">Country: %1$s \nLatitude: %2$f \nLongitude: %3$f</string>
    <string name="location">Location:\n </string>
    <string name="checklocation">Check Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="go">Close map</string>

    <!--Etiquetas de las notificaciones-->
    <string name="notify_channel">RemidnersChannel</string>

    <!--Etiquetas compartir nota-->
    <string name="aceptarShare">Accept</string>
    <string name="cancelShare">Cancel</string>
    <string name="sharedcard">Shared by: </string>

    <string-array name="Sort">
        <item>Sort by creation date</item>
        <item>Sort by last modify date</item>
        <item>Sort by title</item>
    </string-array>

    <string name="textNote">Text note</string>
    <string name="imageNote">Image note</string>
</resources>