<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dip">

        <TextView
            android:id="@+id/label_name3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_EmailAddress"
            android:text="@string/label_name" />

        <EditText
            android:id="@+id/editText_Name3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_name3"
            android:autofillHints="username"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/label_password3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_Name3"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/editText_Password3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_password3"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dip"
            android:text="@string/app_name_mayus"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:text="@string/log_in"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_hi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_login"
            android:paddingTop="20dip"
            android:paddingBottom="20dip"
            android:text="@string/see_you" />

        <EditText
            android:id="@+id/editText_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_hi"
            android:text="@string/label_email" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_Password3"
            android:layout_marginStart="50dip"
            android:layout_marginLeft="50dip"
            android:layout_marginTop="50dip"
            android:layout_marginEnd="50dip"
            android:layout_marginRight="50dip"
            android:layout_marginBottom="50dip"
            android:text="@string/button_login"
            app:backgroundTint="#DA3C3C" />

        <TextView
            android:id="@+id/label_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/forgot_password" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>