<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUserActivity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/textInputOutlineColor"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:paddingTop="20dp"
            app:srcCompat="@drawable/nom_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/label_login2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_name"
                android:text="@string/log_in"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_hi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_login"
                android:paddingTop="20dip"
                android:paddingBottom="20dip"
                android:text="@string/see_you" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                app:startIconDrawable="@android:drawable/sym_action_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_button"
                    style="@style/Widget.Shrine.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_continue" />

                <TextView
                    android:id="@+id/label_signin2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:text="@string/forgot_password" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>