<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_folders">

    <fragment
        android:id="@+id/nav_folders"
        android:name="com.example.my_notes.ui.foldershome.FolderFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_folderlist" >
        <action
            android:id="@+id/action_nav_folder_to_notes"
            app:destination="@id/nav_noteList" >
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.my_notes.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" >
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.my_notes.BlankFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_blank" />

    <fragment
        android:id="@+id/nav_noteList"
        android:name="com.example.my_notes.ui.notes.NotesFragment"
        android:label="@string/menu_notelist"
        tools:layout="@layout/fragment_notelist" >
        <action
            android:id="@+id/action_nav_noteList_to_imageNoteFragment"
            app:destination="@id/imageNoteFragment" />
        <action
            android:id="@+id/action_nav_noteList_to_TextNoteFragment"
            app:destination="@id/textNoteContentFragment" />
    </fragment>
    <fragment
        android:id="@+id/imageNoteFragment"
        android:name="com.example.my_notes.Content.ImageNoteContentFragment"
        android:label="fragment_imagenote"
        tools:layout="@layout/fragment_imagenote" >
    </fragment>
    <fragment
        android:id="@+id/textNoteContentFragment"
        android:name="com.example.my_notes.Content.TextNoteContentFragment"
        android:label="TextNoteContentFragment"
        tools:layout="@layout/fragment_textnote" />
</navigation>