<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reminderFormLL"
    android:orientation="vertical"
    android:padding="@dimen/formTitlePadding"
    tools:context="com.example.my_notes.ui.calendar.CalendarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/formTitlePadding"
                android:text="@string/form_title"
                android:textSize="@dimen/formTitleSize"
                android:textStyle="bold"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/formTitlePadding">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/formTitlePadding"
                android:text="@string/form_description"
                android:textSize="@dimen/formDescriptionSize"
                android:textStyle="bold"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/formTitlePadding">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/formTitlePadding"
                android:text="@string/form_location"
                android:textSize="@dimen/formDescriptionSize"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/formTitlePadding">

            </com.google.android.material.textfield.TextInputEditText>

            <Button
                android:id="@+id/checklocbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checklocation"
                app:rippleColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textViewLatLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="@dimen/formTitlePadding"
                android:text=""
                android:textSize="@dimen/formDescriptionSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/formTitlePadding"
                android:text="@string/form_alarm"
                android:textSize="@dimen/formDescriptionSize"
                android:textStyle="bold"></TextView>

            <ImageButton
                android:id="@+id/add_alarm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="#AAA8A8"
                android:contentDescription="@string/form_description"
                app:srcCompat="@drawable/alarm_black_24dp"></ImageButton>

            <TextView
                android:id="@+id/horaSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->