<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NoteCardView"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/textnote_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--Añadiremos una imagen del tipo de nota que sea-->


        <ImageView
            android:id="@+id/typeText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:baselineAlignBottom="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/image_black_24dp"
            tools:ignore="VectorDrawableCompat">

        </ImageView>

        <LinearLayout
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NoteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/default_title_note"
                android:textSize="@dimen/NoteTitleSize"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/NoteDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/default_date"
                android:textSize="@dimen/NoteDateSize">

            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sharedEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@id/sharedBy"
                    android:textSize="@dimen/NoteDateSize"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/sharedBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharedcard"
                    android:textSize="@dimen/NoteDateSize"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>